Fix positioning, padding, alignments

--- a/static/css/contacts.css
+++ b/static/css/contacts.css
@@ -6,7 +6,7 @@
 
 .university-title {
   font-family: 'abrilfatfaceregular';
-  font-size: 36pt;
+  font-size: 40pt;
   font-weight: 400;
   color: #000000;
   margin-top: 10%;
