--- a/static/css/language-buttons.css
+++ b/static/css/language-buttons.css
@@ -7,7 +7,7 @@
 .header {
   position: fixed;
   top: 0px;
-  margin-left: 77.5%;
+  margin-left: 75%;
 }
 
 .language-btn {
